--- a/style/style_homepage.css
+++ b/style/style_homepage.css
@@ -102,21 +102,24 @@ h1, h2, h3 {
 }
 
 /* ----- Mise en page en tete ----- */
-.HomepageHeader {
+.homepageHeader {
   height: 50px;
 }
 
-.HomepageHeader img {
+@media screen and (min-width: 600px) {
+  .homepageHeader {
+    height: 120px;
+  }
+}
+
+.homepageHeader img {
   margin: auto;
   margin-bottom: 16px;
   width: 170px;
 }
 
 @media screen and (min-width: 600px) {
-  .HomepageHeader {
-    height: 120px;
-  }
-  .HomepageHeader img {
+  .homepageHeader img {
     margin-bottom: 20px;
     width: 250px;
   }
@@ -143,7 +146,7 @@ h1, h2, h3 {
 
 @media screen and (min-width: 600px) {
   .location p {
-    font-size: 1.3rem !important;
+    font-size: 1.3rem;
   }
 }
 
@@ -164,10 +167,22 @@ h1, h2, h3 {
   margin: 0 40px 15px 40px;
 }
 
+@media screen and (min-width: 600px) {
+  .about h2 {
+    font-size: 1.9rem;
+  }
+}
+
 .about p {
   margin-bottom: 30px;
   font-weight: 200;
   font-size: 1.2rem;
+}
+
+@media screen and (min-width: 600px) {
+  .about p {
+    font-size: 1.5rem;
+  }
 }
 
 .about a {
@@ -175,6 +190,12 @@ h1, h2, h3 {
   font-weight: 400;
   font-size: 1rem;
   vertical-align: middle;
+}
+
+@media screen and (min-width: 600px) {
+  .about a {
+    font-size: 1.5rem;
+  }
 }
 
 .about .btn {
@@ -202,20 +223,7 @@ h1, h2, h3 {
 
 @media screen and (min-width: 600px) {
   .about .btn {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-  }
-}
-
-@media screen and (min-width: 600px) {
-  .about h2 {
-    font-size: 1.9rem !important;
-  }
-  .about a, .about p {
-    font-size: 1.5rem !important;
-  }
-  .about .btn {
-    width: 650px;
+    width: 400px;
     height: 60px;
     background-image: linear-gradient(160deg, #ff88de, #9b63df);
   }
@@ -226,6 +234,12 @@ h1, h2, h3 {
   padding: 55px 10px 55px 20px;
 }
 
+@media screen and (min-width: 600px) {
+  .howTo {
+    padding: 20px 10px 30px;
+  }
+}
+
 .howTo h2 {
   font-weight: 550;
   font-size: 1.7rem;
@@ -233,9 +247,6 @@ h1, h2, h3 {
 }
 
 @media screen and (min-width: 600px) {
-  .howTo {
-    padding: 20px 10px 30px;
-  }
   .howTo h2 {
     font-weight: 600;
     font-size: 1.8rem;
@@ -245,12 +256,8 @@ h1, h2, h3 {
 
 .howToList {
   width: 100%;
-}
-
-@media screen and (min-width: 600px) {
-  .howToList {
-    display: row;
-  }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .howToStep {
@@ -260,6 +267,12 @@ h1, h2, h3 {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 600px) {
+  .howToStep {
+    width: 33%;
+  }
 }
 
 .howToStep .stepNumber {
@@ -272,17 +285,17 @@ h1, h2, h3 {
   font-size: 0.9rem;
 }
 
-.howToStep .stepNumber span {
-  margin: auto;
-}
-
 @media screen and (min-width: 600px) {
   .howToStep .stepNumber {
-    height: 45px;
+    height: 40px;
     width: 45px;
     border-radius: 50%;
     font-size: 1rem;
   }
+}
+
+.howToStep .stepNumber span {
+  margin: auto;
 }
 
 .stepText {
@@ -295,10 +308,19 @@ h1, h2, h3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 1rem;
-  font-weight: 400;
   -webkit-box-shadow: 0 5px 15px silver;
           box-shadow: 0 5px 15px silver;
+}
+
+.stepText p {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+@media screen and (min-width: 600px) {
+  .stepText p {
+    font-size: 1.1rem;
+  }
 }
 
 .stepText i {
@@ -308,18 +330,19 @@ h1, h2, h3 {
   font-size: 1.2rem;
 }
 
+@media screen and (min-width: 600px) {
+  .stepText i {
+    margin: 0px 20px 0 20px;
+    font-size: 1.5rem;
+  }
+}
+
 .stepText:hover {
   background-color: #f4eefc;
 }
 
 .stepText:hover i {
   color: #9356DC;
-}
-
-@media screen and (min-width: 600px) {
-  .stepText {
-    font-size: 1.1rem;
-  }
 }
 
 /* ----- Bloc restaurants ----- */
@@ -336,8 +359,13 @@ h1, h2, h3 {
 
 @media screen and (min-width: 600px) {
   .restaurants h2 {
-    font-size: 1.8rem;
+    font-size: 1.9rem;
   }
+}
+
+.restaurantsBox {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media screen and (min-width: 600px) {
@@ -352,6 +380,7 @@ h1, h2, h3 {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   height: 280px;
+  width: 100%;
   border-radius: 1rem;
   margin-bottom: 20px;
   -webkit-box-shadow: 0 5px 15px silver;
@@ -473,7 +502,7 @@ h1, h2, h3 {
 .restaurantsBox .restaurantDetails .detailsText p {
   margin: 0;
   font-weight: 300;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 /* ----- Transition like ----- */
@@ -528,11 +557,23 @@ footer h3 {
   padding: 20px 20px 10px 20px;
 }
 
+@media screen and (min-width: 600px) {
+  footer h3 {
+    font-size: 1.6rem;
+  }
+}
+
 footer li {
   font-size: 0.9rem;
   font-weight: 300;
   margin-left: 15px;
   padding: 5px;
+}
+
+@media screen and (min-width: 600px) {
+  footer li {
+    font-size: 1.3rem;
+  }
 }
 
 footer i {
@@ -542,11 +583,8 @@ footer i {
 }
 
 @media screen and (min-width: 600px) {
-  footer h3 {
-    font-size: 1.6rem;
-  }
-  footer li {
-    font-size: 1.3rem;
+  footer i {
+    font-size: 1.1rem;
   }
 }
 /*# sourceMappingURL=style_homepage.css.map */
