--- a/style/style_homepage.scss
+++ b/style/style_homepage.scss
@@ -6,37 +6,22 @@ $lightgreyColor:darken(whitesmoke, 2%);
 $darkgreyColor: darken(grey, 25%);
 $white:#fff;
 
-$checkTransitionWidth: 70px;
-$menuAppearDelay: 200ms;
-$maxDishes: 4;
-
-$imageRestaurants:(
-    la_palette_du_gout: 'images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg',
-    la_note_enchantee: 'images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg',
-    a_la_francaise: 'images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg',
-    le_delice_des_sens: 'images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg'
-);
-
-$breakpointsMap:(
+$breakpoints-map:(
     tablet: 600px,
     desktop: 1024px
 );
 
 /*--Déclaration des fonctions--*/
 @mixin shadowBox($color: lighten(grey, 25%)) {
-    box-shadow: 0 5px 15px $color;
+  box-shadow: 0 5px 15px $color;
 }
 
 @mixin backgroundGrey($scale : 0%){
-  background-color: darken($lightgreyColor, $scale);
-}
-
-@mixin checkTransitionTiming($type){
-    transition: $type 300ms 100ms linear;
+background-color: darken($lightgreyColor, $scale);
 }
 
 @mixin breakpoints($min-device) {
-  @media screen and (min-width: map-get($breakpointsMap, $min-device)){
+  @media screen and (min-width: map-get($breakpoints-map, $min-device)){
       @content;
   }
 }
@@ -108,18 +93,17 @@ h1, h2, h3{
 }
 
 /* ----- Mise en page en tete ----- */
-.HomepageHeader{
+.homepageHeader{
   height: 50px;
+  @include breakpoints(tablet){
+    height: 120px;
+  }
 
   img{
     margin: auto;
     margin-bottom: 16px;
     width: 170px;
-  }
-
-  @include breakpoints(tablet){
-    height: 120px;
-    img{    
+    @include breakpoints(tablet){
       margin-bottom: 20px;
       width: 250px;
     }
@@ -141,11 +125,8 @@ h1, h2, h3{
   p{
     margin: auto;
     font-size:1rem;
-  }
-
-  @include breakpoints(tablet){
-    p{
-      font-size: 1.3rem !important;
+    @include breakpoints(tablet){
+      font-size:1.3rem;
     }
   }
 }
@@ -164,12 +145,18 @@ h1, h2, h3{
     font-weight: 550;
     font-size:1.7rem;  
     margin: 0 40px 15px 40px;
+    @include breakpoints(tablet){
+      font-size: 1.9rem;
+    }
   }
 
   p{
     margin-bottom: 30px;
     font-weight: 200;
     font-size: 1.2rem;
+    @include breakpoints(tablet){
+      font-size: 1.5rem;
+    }
   }
 
   a{
@@ -177,6 +164,9 @@ h1, h2, h3{
     font-weight: 400;
     font-size:1rem;
     vertical-align: middle;
+    @include breakpoints(tablet){
+      font-size: 1.5rem;
+    }
   }   
 
   .btn{
@@ -195,21 +185,7 @@ h1, h2, h3{
       @include shadowBox(darken($lightgreyColor, 30%));
     }
     @include breakpoints(tablet){
-      transform: scale(1.1);
-    }
-  }
-
-  @include breakpoints(tablet){
-    h2{
-      font-size: 1.9rem !important;
-    }
-    
-    a, p{
-      font-size: 1.5rem !important;
-    }
-  
-    .btn{
-      width: 650px;
+      width: 400px;
       height: 60px;
       background-image: linear-gradient(160deg,lighten($secondaryColor,3%), lighten($primaryColor,3%));
     }
@@ -219,30 +195,25 @@ h1, h2, h3{
 /* ----- Mise en page bloc du fonctionnement ----- */
 .howTo{
   padding: 55px 10px 55px 20px;
+  @include breakpoints(tablet){
+    padding: 20px 10px 30px;
+  }
 
   h2{
     font-weight: 550;
     font-size:1.7rem;
     margin-bottom:35px;
-  }
-
-  @include breakpoints(tablet){
-    padding: 20px 10px 30px;
-    
-    h2{
+    @include breakpoints(tablet){
       font-weight: 600;
       font-size:1.8rem;
       margin: 30px 20px;
     }
-  } 
+  }
 }
 
 .howToList{
   width: 100%;
-
-  @include breakpoints(tablet){
-    display: row;
-    }
+  flex-wrap: wrap;
 }
 
 .howToStep{
@@ -250,6 +221,9 @@ h1, h2, h3{
   width: 100%;
   align-items: center;
   margin-bottom: 30px;
+  @include breakpoints(tablet){
+    width: 33%;
+  }
 
   .stepNumber{
     background-color: $primaryColor;
@@ -259,18 +233,16 @@ h1, h2, h3{
     border-radius: 50%;
     z-index: 2;
     font-size: 0.9rem;
-
-    span{
-      margin: auto;
-    }
-
     @include breakpoints(tablet){
-      height: 45px;
+      height: 40px;
       width: 45px;
       border-radius: 50%;
       font-size: 1rem;
     }
-  } 
+    span{
+      margin: auto;
+    }
+  }
 }
 
 .stepText{
@@ -281,15 +253,25 @@ h1, h2, h3{
   width: 100%;
   height: 100%;
   align-items: center;
-  font-size: 1rem;
-  font-weight: 400;
   @include shadowBox;
 
+  p{
+  font-size: 1rem;
+  font-weight: 400;
+  @include breakpoints(tablet){
+    font-size: 1.1rem;
+  }
+  }
+  
   i{
     width: 21px;
     color: #7D7D7D;
     margin: 0 25px 0 30px;
     font-size: 1.2rem;
+    @include breakpoints(tablet){
+      margin: 0px 20px 0 20px;
+      font-size: 1.5rem;
+    }
   }
       
   &:hover{
@@ -298,12 +280,8 @@ h1, h2, h3{
       color: $primaryColor;
     }
   }
-      
-  @include breakpoints(tablet){
-    font-size: 1.1rem;
-  }
 }
-
+      
 /* ----- Bloc restaurants ----- */
 .restaurants{
   padding: 60px 25px 50px 25px;
@@ -313,14 +291,14 @@ h1, h2, h3{
   font-weight: 600;
   font-size:1.5rem;
   margin-bottom: 20px;
-
-    @include breakpoints(tablet){
-      font-size: 1.8rem;
+  @include breakpoints(tablet){
+      font-size: 1.9rem;
     }
   }
 }
-  
+
 .restaurantsBox{
+  flex-wrap: wrap;
   @include breakpoints(tablet){
     display: row;
     flex-wrap: wrap;
@@ -329,10 +307,10 @@ h1, h2, h3{
   .restaurantCard{
     box-sizing: border-box;
     height: 280px;
+    width: 100%;
     border-radius: 1rem;
     margin-bottom: 20px;
     @include shadowBox;
-
     @include breakpoints(tablet){
       width: 50%;
       height: 400px;
@@ -347,7 +325,6 @@ h1, h2, h3{
     background-size: cover;
     background-position: bottom center;
     position: relative;
-
     @include breakpoints(tablet){
       height: 80%;
     }
@@ -360,7 +337,6 @@ h1, h2, h3{
     background-size: cover;
     background-position: center center;
     position: relative;
-
     @include breakpoints(tablet){
       height: 80%;
     }
@@ -392,7 +368,6 @@ h1, h2, h3{
     border-radius: 1px;
     font-weight: 500;
     font-size: 0.9rem;
-
     @include breakpoints(tablet){
       font-size: 1.4rem;
     }
@@ -402,7 +377,6 @@ h1, h2, h3{
     height: 30%;
     background-color: $white;
     border-radius: 0 0 1rem 1rem;
-
     @include breakpoints(tablet){
       height: 20%;
     }
@@ -417,7 +391,6 @@ h1, h2, h3{
         font-weight: 600;
         font-size: 1.2rem;
         margin-bottom: 5px;
-
         @include breakpoints(tablet){
           font-size: 1.4rem;
           margin-top: 2px;
@@ -428,7 +401,7 @@ h1, h2, h3{
       p{
         margin: 0;
         font-weight: 300;
-        font-size: 1.2rem;
+        font-size: 1rem;
       } 
     }
   }
@@ -483,6 +456,9 @@ footer{
     font-family: 'Shrikhand', cursive;
     font-size:1.2rem;
     padding: 20px 20px 10px 20px;
+    @include breakpoints(tablet){
+      font-size: 1.6rem;
+    }
   }
 
   li{
@@ -490,21 +466,18 @@ footer{
     font-weight: 300;
     margin-left: 15px;
     padding: 5px;
+    @include breakpoints(tablet){
+      font-size: 1.3rem;
+    }
   }
 
   i {
     font-size:0.8rem;
     width: 21px;
     margin: 0 5px 0 0;
-  }
-
-  @include breakpoints(tablet){
-    h3 {
-      font-size: 1.6rem;
-    }
-
-    li {
-      font-size: 1.3rem;
+    @include breakpoints(tablet){
+      font-size: 1.1rem;
     }
   }
 }
+
